# turing-challenges

./: README.md  pyproject.toml
notebooks/: demo.ipynb  demo_challenges.ipynb  notebook_utils.py
src/turing_challenges/: __init__.py  challenge_titles.json  cli.py  commands.py  discovery.py  display.py  errors.py  loader.py  registry.py  runner.py  utils.py
src/turing_challenges/challenge_001/: challenge.py  cli.py
src/xdvyturing/: utils.py
src/xdvyturing/defi10/: README.md  defi10.py
src/xdvyturing/defi12/: README.md  defi12.py
src/xdvyturing/defi2/: README.md  defi2.py
src/xdvyturing/defi3/: README.md  defi3.py
src/xdvyturing/defi4/: README.md  defi4.py
src/xdvyturing/defi5/: README.md  defi5.py
src/xdvyturing/defi7/: README.md  defi7.py
src/xdvyturing/defi9/: README.md  defi9.py
test/challenge_001/: .coverage  test_challenge.py  test_cli.py
test/defi2/: test_defi2.py
