[project]
name = "turing_challenges"
version = "0.1.0"
packages = [{ include = "turing_challenges", from = "src" }]
description = "Package built to solve Turing challenges."
authors = [
    {name = "Kirito",email = "50915339+Xdvy@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-html (>=4.2.0,<5.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
include = ["turing_challenges/**/README.md"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
turing = "turing_challenges.cli:main"

[tool.poetry.extras]
rich = ["rich"]
